EDU-7071: Remove legacy account concepts that no longer exist (#78)